--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1{
 }
 
 #splash{
-    padding: 1.5em;
+    padding:1em .1em 1em .1em;
     background-color: rgba(255, 255, 255, 0.75);
     position: absolute;
     z-index: 10;
