--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,33 @@ h1{
 }
 
 /*big sized screen*/
+@media (min-width: 550px) {
+    
+    h1{
+        font-size: 1.5em;
+    }
+
+    #splashContent{
+        max-width: 20em;
+        margin: auto;
+    }
+
+    .btn{
+        border: 2 solid #494032;
+        padding: .5em;
+        border-radius: 1em;
+        cursor: pointer;
+        width: 10em;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+
+    .logo{
+        max-width: 10em;
+    }
+}
+
+    /*big sized screen*/
 @media (min-width: 800px) {
     
     h1{
@@ -100,4 +127,4 @@ h1{
         max-width: 10em;
     }
 
-    }
+}
